--- a/generators/app/templates/thesis-additions.en.tex
+++ b/generators/app/templates/thesis-additions.en.tex
@@ -117,3 +117,7 @@
   \fqauthor
   \end{list}
 }
+
+% fix incompatibilities between KOMA and other packages, mainly float.
+% should be loaded at the very end - see http://tex.stackexchange.com/a/156256/9075
+\usepackage{scrhack}
