--- a/generators/app/templates/algorithms.preamble.en.tex
+++ b/generators/app/templates/algorithms.preamble.en.tex
@@ -9,4 +9,4 @@
 \usepackage{algpseudocodex}
 
 \floatname{algorithm}{Algorithmus}
-\renewcommand{\listalgorithmname}{Algorithmenverzeichnis}
+% TODO: \renewcommand{\listalgorithmname}{Algorithmenverzeichnis}
