--- a/generators/app/templates/thesis-additions.en.tex
+++ b/generators/app/templates/thesis-additions.en.tex
@@ -1,7 +1,5 @@
 <% if (documentclass == "ustutt") { -%>
-% Fixes wrong spacing in the TOC
-\usepackage[tocgraduated]{tocstyle}
-\usetocstyle{standard}
+% Wrong spacing of the TOC should not appear after 3 latex runs - see https://tex.stackexchange.com/a/702375/9075
 
 %% Inhaltsverzeichnis (Schrift, Aussehen) sowie weitere Verzeichnisse ====
 \setcounter{secnumdepth}{3}    % Abbildungsnummerierung mit groesserer Tiefe
