--- a/generators/app/templates/font.preamble.en.tex
+++ b/generators/app/templates/font.preamble.en.tex
@@ -203,6 +203,12 @@ In addition, we make the code appear more nice -%>
 % Zusatzliche Symbole (Text Companion font extension)
 \usepackage{textcomp}
 
+% Symbole Check und Cross
+\usepackage{pifont}
+\newcommand{\dingcheck}{\ding{51}}
+\newcommand{\dingcross}{\ding{55}}
+%for scaling see http://tex.stackexchange.com/a/130236/9075
+
 \setkomafont{sectioning}{\normalfont\normalcolor\rmfamily\mdseries}
 \setkomafont{descriptionlabel}{\bfseries}
 \setkomafont{pageheadfoot}{\small\sffamily}
