Add new hyphenation patterns

--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -301,7 +301,17 @@
 
 <% } -%>
 % correct bad hyphenation here
-\hyphenation{op-tical net-works semi-conduc-tor}
+\hyphenation{
+  Spe-zi-fi-ka-tion
+  In-te-gra-tion
+  An-for-de-rung An-for-de-run-gen
+  Be-nut-zer-ober-flä-che
+  Mes-sung-en
+  aus-zu-tau-schen
+  Lauf-zeit-in-for-ma-tionen
+  % May not be hypphenated
+  AROMA TOSCA BPMN OASIS OMG DMTF IT DevOps
+}
 <% switch (documentclass) { case "acmart": -%>
 
 \acmConference[short-conference-name]{full-conference-name}{November 02--06, 2021}{City, Country}
