--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -301,7 +301,11 @@
 
 <% } -%>
 % correct bad hyphenation here
-\hyphenation{op-tical net-works semi-conduc-tor}
+\hyphenation{
+  op-tical net-works semi-conduc-tor
+  % May not be hypphenated
+  AROMA TOSCA BPMN OASIS OMG DMTF IT DevOps
+}
 <% switch (documentclass) { case "acmart": -%>
 
 \acmConference[short-conference-name]{full-conference-name}{November 02--06, 2021}{City, Country}
