--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -536,6 +536,7 @@ Kurzfassung der Arbeit.
 % creates the second title. It will be ignored for other modes.
 \IEEEpeerreviewmaketitle
 <% break; case "ustutt": -%>
+%\pagestyle{justpagenums}
 \pagestyle{scrheadings}
 \end{otherlanguage}
 \clearpage
@@ -578,8 +579,8 @@ The following is typeset for both ustutt and scientific-thesis.
 \listoflistings
 <% } -%>
 
-%mittels \newfloat wurde die Algorithmus-Gleitumgebung definiert.
-%Mit folgendem Befehl werden alle floats dieses Typs ausgegeben
+% mittels \newfloat wurde die Algorithmus-Gleitumgebung definiert.
+% Mit folgendem Befehl werden alle floats dieses Typs ausgegeben
 %\listof{Algorithmus}{List of Algorithms}
 %\listofalgorithms %Ist nur für Algorithmen, die mittels \begin{algorithm} umschlossen werden, nötig
 
