--- a/generators/app/templates/thesis-additions.en.tex
+++ b/generators/app/templates/thesis-additions.en.tex
@@ -1,5 +1,14 @@
 <% if (documentclass == "ustutt") { -%>
+\setlength{\evensidemargin}{-24pt}
+\setlength{\oddsidemargin}{-24pt}
+
 % Wrong spacing of the TOC should not appear after 3 latex runs - see https://tex.stackexchange.com/a/702375/9075
+% (outdated) This is necessary if you have more than 9 sections/subsections/subsubsections
+% \makeatletter
+% \renewcommand\l@section{\@dottedtocline{1}{1.5em}{3em}}
+% \renewcommand\l@subsection{\@dottedtocline{2}{1.5em}{4.3em}}
+% \renewcommand\l@subsubsection{\@dottedtocline{3}{1.5em}{5.6em}}
+% \makeatother
 
 %% Inhaltsverzeichnis (Schrift, Aussehen) sowie weitere Verzeichnisse ====
 \setcounter{secnumdepth}{3}    % Abbildungsnummerierung mit groesserer Tiefe
