Consistency German and English

--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -529,7 +529,7 @@ Kurzfassung der Arbeit.
 
 \emph{As a single sentence, what’s the key impact of your research? Here we’re not looking for the outcome of an experiment.} We’re looking for a summary of the implications. What’s it all mean? Why should other people care? What can they do with your research. (Essay folks: all the same questions apply: what conclusions did you draw, and why would anyone care about them?)
 <% } else { -%>
-<Kurzfassung der Arbeit>
+\lipsum[1]
 <% } -%>
 <%# Jetzt ist der Anfang vom Abstract und der Inhalt gesetzt - jetzt folgt das Schließen des Abstracts -%>
 <% switch (documentclass) { case "lncs": -%>
