Some more of USTUTT

--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -969,7 +969,8 @@ Hier sollen allgemeine \LaTeX-Hinweise gegeben werden, damit man Minimalbeispiel
 <% } -%>
 <% if (isThesis) { -%>
 
-<%- include('varioref.example.en.tex', this); %>
+<%- include('varioref.example.en.tex', this); -%>
+<%- include('thesis-additions.examples.en.tex', this); -%>
 <% } -%>
 
 <% if (howtotext) { -%>
@@ -989,7 +990,17 @@ You should explicitly discuss limitations and shortcomings of your work and deta
 \lipsum[1-4]
 <% } -%>
 <% if (documentclass == 'ustutt') { -%>
+\setchapterfooter{Kleiner Fuß!}
+<%= heading1 %>{Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum}
+\label{chap:label}
+%Um die Fußzeile zu demonstrieren
+\blindtext[3]
+
+\resetchapterfooter
+
 \section{Section}
+\label{sec:loremipsum}
+\lipsum[1-4]
 \section{Section}
 \section{Section}
 \section{Section}
@@ -1173,6 +1184,8 @@ Alle Links wurden zuletzt am 29.03.2021 geprüft.
 %%% ===============================================================================
 %<%= heading1 %>{My first appendix}\label{sec:appendix1}
 %%% ===============================================================================
+
+\ipsum[1]
 
 \pagestyle{empty}
 \renewcommand*{\chapterpagestyle}{empty}
