--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -947,7 +947,8 @@ It focuses on minimal examples, which can be directly adapted to the content
 <% } -%>
 <% if (isThesis) { -%>
 
-<%- include('varioref.example.en.tex', this); %>
+<%- include('varioref.example.en.tex', this); -%>
+<%- include('thesis-additions.examples.en.tex', this); -%>
 <% } -%>
 
 <% if (howtotext) { -%>
@@ -967,7 +968,17 @@ You should explicitly discuss limitations and shortcomings of your work and deta
 \lipsum[1-4]
 <% } -%>
 <% if (documentclass == 'ustutt') { -%>
+\setchapterfooter{Kleiner Fuß!}
+<%= heading1 %>{Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum}
+\label{chap:label}
+%Um die Fußzeile zu demonstrieren
+\blindtext[3]
+
+\resetchapterfooter
+
 \section{Section}
+\label{sec:loremipsum}
+\lipsum[1-4]
 \section{Section}
 \section{Section}
 \section{Section}
@@ -1142,11 +1153,13 @@ All links were last followed on October 5, 2020.
 % 'Anhang' ins Inhaltsverzeichnis
 %\phantomsection
 %\addcontentsline{toc}{chapter}{Appendix}
-%\addcontentsline{toc}{part}{Appendix}
+\addcontentsline{toc}{part}{Appendix}
 
 %%% ===============================================================================
 %<%= heading1 %>{My first appendix}\label{sec:appendix1}
 %%% ===============================================================================
+
+\ipsum[1]
 
 \pagestyle{empty}
 \renewcommand*{\chapterpagestyle}{empty}
