--- a/generators/app/templates/ustutt-todo.tex
+++ b/generators/app/templates/ustutt-todo.tex
@@ -7,6 +7,21 @@
 
 \usepackage{blindtext}
 
-% Add example for pdflscape
 
-% Add example for \textmarker and \modified
+\section{Demonstration von refenums}
+\label{sec:method}
+%See http://mirror.ctan.org/macros/latex/contrib/refenums/demo.tex for a full usage guide
+%Setup ``Steps'' not having a print form
+\setupRefEnums[~]{Schritt}{ONLYSHORT}
+
+\defRefEnum[subsection]{Schritt}{Anforderungsanalyse}{rqa}
+\label{sec:rqa}
+\blindtext
+
+\defRefEnum[subsection]{Schritt}{Spezifikation}{spec}
+\blindtext
+
+\subsection{Zusammenfassung}
+In \cref{sec:method} wurde zuerst \refEnumFull{Schritt}{rqa} vorgestellt.
+Anschließend wurde \refEnumFull{Schritt}{spec} beschrieben.
+
