--- a/generators/app/templates/ustutt-pagestyle.preamble.en.tex
+++ b/generators/app/templates/ustutt-pagestyle.preamble.en.tex
@@ -2,7 +2,7 @@
 \usepackage{scrlayer-scrpage}
 
 \pagestyle{scrheadings}
-\clearscrheadings
+\clearmainofpairofpagestyles
 
 \newcommand{\setchapterfooter}[1]{%
 	\def\mydummy{#1}
