--- a/generators/app/templates/todo.preamble.en.tex
+++ b/generators/app/templates/todo.preamble.en.tex
@@ -7,6 +7,12 @@
 %
 % - \textcomment - highlights text and has a hover comment
 % - \comment     - just puts a comment to the side
+%
+% - \missingfigure
+%
+% - \textmarker
+% - \modified
+% - \change      - adresses a review comment
 
 <% switch (todo) { case "pdfcomment": -%>
 % Enable nice comments
@@ -35,6 +41,7 @@
 
 % Define default commands
 \makeatletter
+\@ifundefined{missingfigure}{\newcommand{\missingfigure}}{... missing figure ...}{}
 \@ifundefined{textcomment}{\newcommand{\textcomment}[2]{#1 \todo{#2}}}{}
 \@ifundefined{comment}{\newcommand{\comment}[1]{\marginpar{#1}}}{}
 \@ifundefined{todo}{\newcommand{\todo}[1]{\comment{#1}}}{}
