--- a/generators/app/templates/varioref.example.en.tex
+++ b/generators/app/templates/varioref.example.en.tex
@@ -1,4 +1,4 @@
-<%= heading2 %>{Cleveref examples}
+<%= heading2 %>{Varioref examples}
 \label{sec:ex:vref}
 
 Varioref demonstration: Vref at beginning of sentence, vref in all other cases.
