Fix algorithms and spacing

--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -357,7 +357,9 @@
 \fi
 <% } -%>
 <% } -%>
-<% if (isThesis) { %><%- include('thesis-additions.en.tex', this); %><% } -%>
+<% if (isThesis) { %><%- include('thesis-additions.en.tex', this); %>
+
+<% } -%>
 \begin{document}
 <% if ((latexcompiler == "lualatex") || (latexcompiler == "both")) { -%>
 <% if (latexcompiler == "both") { -%>
@@ -474,7 +476,6 @@
 % auch im Stil vom Inhaltsverzeichnis
 \section*{Kurzfassung}
 <% break; case "ustutt": -%>
-
 % Die Seitennummerierung erfolgt durchlaufend ab der Titelseite. Also keine
 % Spielereien mit römischen Ziffern usw. - Die ISO 7144 schreibt das sogar für
 % wissenschaftliche Werke vor.
