--- a/generators/app/templates/algorithms.preamble.en.tex
+++ b/generators/app/templates/algorithms.preamble.en.tex
@@ -1,12 +1,12 @@
-<%# outdated
 % https://ctan.org/pkg/algorithms
 % Consists of two environments: algorithm and algorithmic
-% \usepackage[chapter]{algorithm}
+% Although oudated, it defines the "algorithm" float enviornment
+% TODO: Define floating environment "algorithm" in other ways
+\usepackage[chapter]{algorithm}
 
--%>
 % https://ctan.org/pkg/algpseudocodex
 % Successor of algorithmicx; more modern than https://ctan.org/pkg/algorithms
 \usepackage{algpseudocodex}
 
 \floatname{algorithm}{Algorithmus}
-% TODO: \renewcommand{\listalgorithmname}{Algorithmenverzeichnis}
+\renewcommand{\listalgorithmname}{Algorithmenverzeichnis}
