--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -275,8 +275,9 @@
 \setlength{\oddsidemargin}{-24pt}
 <% } -%>
 
-<% if (feature.acronyms) { -%><%- include('acronyms.preamble.en.tex', this); %><% } -%>
+<% if (feature.acronyms) { -%><%- include('acronyms.preamble.en.tex', this); %>
 
+<% } -%>
 \usepackage{xspace}
 
 % Enable hyphenation at other places as the dash.
