--- a/generators/app/templates/hyperref.preamble.en.tex
+++ b/generators/app/templates/hyperref.preamble.en.tex
@@ -1,7 +1,8 @@
 % Enable that parameters of \cref{}, \ref{}, \cite{}, ... are linked so that a reader can click on the number an jump to the target in the document
 \usepackage{hyperref}
 
-<% if (documentclass != "ustutt") { %>% Enable hyperref without colors and without bookmarks<% } -%>
+<% if (documentclass != "ustutt") { %>% Enable hyperref without colors and without bookmarks
+<% } -%>
 \hypersetup{
   <% if (documentclass == "ustutt") { -%>
   urlcolor=pdfurlcolor,    % \href{...}{...} external (URL)
