Fix another typo

--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -1185,7 +1185,7 @@ Alle Links wurden zuletzt am 29.03.2021 geprüft.
 %<%= heading1 %>{My first appendix}\label{sec:appendix1}
 %%% ===============================================================================
 
-\ipsum[1]
+\lipsum[1]
 
 \pagestyle{empty}
 \renewcommand*{\chapterpagestyle}{empty}
