--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -1159,7 +1159,7 @@ All links were last followed on October 5, 2020.
 %<%= heading1 %>{My first appendix}\label{sec:appendix1}
 %%% ===============================================================================
 
-\ipsum[1]
+\lipsum[1]
 
 \pagestyle{empty}
 \renewcommand*{\chapterpagestyle}{empty}
