make listings en and de consistent

--- a/generators/app/templates/listings.preamble.de.tex
+++ b/generators/app/templates/listings.preamble.de.tex
@@ -37,7 +37,10 @@
 }
 
 \lstset{
-  language=XML,
+  % everything between (* *) is a latex command
+  escapeinside={(*}{*)},
+  %
+  language=json,
   %
   showstringspaces=false,
   %
