Add more examples for todo package

--- a/generators/app/templates/thesis-additions.examples.en.tex
+++ b/generators/app/templates/thesis-additions.examples.en.tex
@@ -7,8 +7,10 @@ Referencetest: \Cref{ssec:example}, \cref{fig:Abbildung} und \cref{alg:example}.
 \textmarker{Markierter Text.}
 <%- eexample %>
 
+Bei \verb1\textmarker1 wird nur die Textfarbe geändert, da dies auch bei einigen Worten gut funktioniert.
+
 <%- bexample %>
-\modified{Manuelle Markierung für Text, der seit der letzten Version geändert wurde.}
+\textcomment{Markierter Text.}{Kommentar dazu.}
 <%- eexample %>
 
 <%- bexample %>
@@ -17,9 +19,17 @@ Provided indirectly by pdfcomment.sty (soulpos).
 <%- eexample %>
 
 <%- bexample %>
+\modified{Manuelle Markierung für Text, der seit der letzten Version geändert wurde.}
+<%- eexample %>
+
+<%- bexample %>
 Das ist ein Text.
 \change{FL1: Text angepasst}{Geänderter Text}.
 Hier nur ein Kommentar\comment{Kommentar}.
+<%- eexample %>
+
+<%- bexample %>
+\todo{Hier muss noch kräftig Text produziert werden}
 <%- eexample %>
 
 <%- bexample %>
