Extracxt todos.example.en.tex (and rename todo.* to todos.*)

--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -228,7 +228,7 @@
 
 <%- include('footnotes.preamble.en.tex', this); -%>
 
-<%- include('todo.preamble.en.tex', this); -%>
+<%- include('todos.preamble.en.tex', this); -%>
 
 <%- include('siunitx.preamble.en.tex'); -%>
 <% if (isThesis) { -%>
@@ -941,6 +941,7 @@ Hier sollen allgemeine \LaTeX-Hinweise gegeben werden, damit man Minimalbeispiel
 <%- include('paragraphs.example.de.tex', this); %>
 <% if (texlive >= 2021) { %><%- include('mindflow.example.en.tex', this); %>
 <% } -%>
+<%- include('todos.example.en.tex', this); %>
 <%- include('hyphenation.example.en.tex', this); %>
 <%- include('siunitx.example.en.tex', this); %>
 <% if (enquotes == 'csquotes') { %><%- include('csquotes.example.en.tex', this); %>
@@ -974,11 +975,9 @@ Hier sollen allgemeine \LaTeX-Hinweise gegeben werden, damit man Minimalbeispiel
 <% } -%>
 
 <% if (howtotext) { -%>
-
 %%% ===============================================================================
 <%= heading1 %>{Zusammenfassung und Ausblick}\label{sec:conclusion}
 %%% ===============================================================================
-
 Your conclusions are not just a factual summary of your work, but they position, interpret, and defend your findings against the state of the art that you discussed in \cref{sec:introduction:state-of-art}. You specifically outline which concrete findings or methodological contributions advance our knowledge towards the general objective you introduced in \cref{sec:introduction:topic}. Objectively discuss which parts you solved and in which parts you failed.
 
 You should explicitly discuss limitations and shortcomings of your work and detail what kind of future studies are needed to overcome these limitations. Be specific in the sense that your arguments for future work should be based on concrete findings and insights you obtained in your report.
