--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -222,7 +222,7 @@
 
 <%- include('footnotes.preamble.en.tex', this); -%>
 
-<%- include('todo.preamble.en.tex', this); -%>
+<%- include('todos.preamble.en.tex', this); -%>
 
 <%- include('siunitx.preamble.en.tex'); -%>
 <% if (isThesis) { -%>
@@ -919,6 +919,7 @@ It focuses on minimal examples, which can be directly adapted to the content
 <%- include('paragraphs.example.en.tex', this); %>
 <% if (texlive >= 2021) { %><%- include('mindflow.example.en.tex', this); %>
 <% } -%>
+<%- include('todos.example.en.tex', this); %>
 <%- include('hyphenation.example.en.tex', this); %>
 <%- include('siunitx.example.en.tex', this); %>
 <% if (enquotes == 'csquotes') { %><%- include('csquotes.example.en.tex', this); %>
