--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -237,10 +237,8 @@
 <%- include('subfig.preamble.en.tex', this); -%>
 
 <% if (texlive >= 2021) { %><%- include('mindflow.preamble.en.tex', this); %>
-
 <% } -%>
 <% if (isThesis) { %><%- include('algorithms.preamble.en.tex', this); %>
-
 <% } -%>
 <%- include('cleveref.preamble.en.tex', this); -%>
 
@@ -269,8 +267,8 @@
 \setlength{\oddsidemargin}{-24pt}
 <% } -%>
 
-<% if (feature.acronyms) { -%><%- include('acronyms.preamble.en.tex', this); %><% } -%>
-
+<% if (feature.acronyms) { -%><%- include('acronyms.preamble.en.tex', this); %>
+<% } -%>
 % Allows for defining commands that don't eat spaces.
 \usepackage{xspace}
 
