Use \sidecomment instead of \comment

--- a/generators/app/templates/todos.example.en.tex
+++ b/generators/app/templates/todos.example.en.tex
@@ -22,7 +22,10 @@ Provided indirectly by pdfcomment.sty (soulpos).
 <%- bexample %>
 Das ist ein Text.
 \change{FL1: Text angepasst}{Geänderter Text}.
-Hier nur ein Kommentar\comment{Kommentar}.
+<%- eexample %>
+
+<%- bexample %>
+Hier nur ein Kommentar\sidecomment{Kommentar}.
 <%- eexample %>
 
 <%- bexample %>
