--- a/generators/app/templates/todos.preamble.en.tex
+++ b/generators/app/templates/todos.preamble.en.tex
@@ -5,7 +5,7 @@
 % - \todofix - "important" TODOs
 %
 % - \textcomment - highlights text and has a hover comment
-% - \comment     - just puts a comment to the side
+% - \sidecomment - just puts a comment to the side. Note: \comment MUST NOT be used as command name, it is already defined by much packages (mathdesign, mindflow, verbatim, and others)
 %
 % - \missingfigure
 %
@@ -21,19 +21,18 @@
 
 %Small PDF comment
 %1. Parameter: Comment
-\newcommand{\comment}[1]{\pdfcomment[color={0.045 0.278 0.643},voffset=4pt,icon=Note]{#1}}
+\newcommand{\sidecomment}[1]{\pdfcomment[color={0.045 0.278 0.643},voffset=4pt,icon=Note]{#1}}
 % Disabled variant - for the final PDF
-%\newcommand{\comment}[1]{}
+%\newcommand{\sidecomment}[1]{}
 
-\newcommand{\todo}[1]{TODO!\comment{#1}}
+\newcommand{\todo}[1]{TODO!\sidecomment{#1}}
 
-% Aenderungen
+% Änderungen
 %
-% New text:
-% 1. Parameter: Comment
-% 2. Parameter: New text
+% 1. Parameter: Review-Kommentar
+% 2. Parameter: Neuer Text
 \newcommand{\change}[2]{{\color{red}#2}\pdfcomment[color={0.234 0.867 0.211},voffset=8pt,opacity=0.5]{#1}}
-%Disabled variant - for the final PDF
+% Disabled variant - for the final PDF
 %\newcommand{\change}[2]{#2}
 
 <% break; case "todonotes": -%>
@@ -50,8 +49,8 @@
 \makeatletter
 \@ifundefined{missingfigure}{\newcommand{\missingfigure}}{... missing figure ...}{}
 \@ifundefined{textcomment}{\newcommand{\textcomment}[2]{#1 \todo{#2}}}{}
-\@ifundefined{comment}{\newcommand{\comment}[1]{\marginpar{#1}}}{}
-\@ifundefined{todo}{\newcommand{\todo}[1]{\comment{#1}}}{}
+\@ifundefined{sidecomment}{\newcommand{\sidecomment}[1]{\marginpar{#1}}}{}
+\@ifundefined{todo}{\newcommand{\todo}[1]{\sidecomment{#1}}}{}
 \@ifundefined{TODO}{\newcommand{\TODO}[1]{\todo{#1}}}{}
 \@ifundefined{todofix}{\newcommand{\todofix}[1]{\todo{#1}}}{}
 \@ifundefined{change}{\newcommand{\change}[2]{#1 $\rightarrow$ #2}}{}
