Appendix on new page - and with example

--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -1171,6 +1171,7 @@ Alle Links wurden zuletzt am 29.03.2021 geprüft.
 %\IfDefined{printindex}{\printindex}
 %\IfDefined{printnomenclature}{\printnomenclature}
 
+\clearpage
 \appendix
 % 'Anhang' ins Inhaltsverzeichnis
 %\phantomsection
@@ -1178,7 +1179,7 @@ Alle Links wurden zuletzt am 29.03.2021 geprüft.
 \addcontentsline{toc}{part}{Anhang}
 
 %%% ===============================================================================
-%<%= heading1 %>{My first appendix}\label{sec:appendix1}
+<%= heading1 %>{My first appendix}\label{sec:appendix1}
 %%% ===============================================================================
 
 \lipsum[1]
