--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -1148,6 +1148,7 @@ All links were last followed on October 5, 2020.
 %\IfDefined{printindex}{\printindex}
 %\IfDefined{printnomenclature}{\printnomenclature}
 
+\clearpage
 \appendix
 % 'Anhang' ins Inhaltsverzeichnis
 %\phantomsection
@@ -1155,7 +1156,7 @@ All links were last followed on October 5, 2020.
 \addcontentsline{toc}{part}{Appendix}
 
 %%% ===============================================================================
-%<%= heading1 %>{My first appendix}\label{sec:appendix1}
+<%= heading1 %>{My first appendix}\label{sec:appendix1}
 %%% ===============================================================================
 
 \lipsum[1]
