Put list of * directly after TOC

--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -599,12 +599,12 @@ The following is typeset for both ustutt and scientific-thesis.
 %\listofalgorithms %Ist nur für Algorithmen, die mittels \begin{algorithm} umschlossen werden, nötig
 
 <% if (documentclass == 'ustutt') { -%>
-%\chapter*{Definitionsverzeichnis}
-%\addcontentsline{toc}{chapter}{Definitionsverzeichnis}
-%\listtheorems{definition}
+\chapter*{Definitionsverzeichnis}
+\addcontentsline{toc}{chapter}{Definitionsverzeichnis}
+\listtheorems{definition}
 
 <% } -%>
-% Abkürzungsverzeichnis
+% Abkürzungsverzeichnis / Acronyms / Abbreviations
 \printglossaries
 % \printnoidxglossaries
 % \printunsrtglossaries cannot be used, because then no indexing happens; source: https://tex.stackexchange.com/a/287128/9075
@@ -1146,27 +1146,6 @@ Alle Links wurden zuletzt am 29.03.2021 geprüft.
 %%% ===============================================================================
 <% break; case "ustutt": case "scientific-thesis": -%>
 %%% ===============================================================================
-
-<% if (documentclass == "scientific-thesis") { -%>
-%\clearpage
-%\listoffigures
-
-%\listoftables
-
-%\chapter*{Definitionsverzeichnis}
-%\addcontentsline{toc}{chapter}{Definitionsverzeichnis}
-%\listtheorems{definition}
-
-<% } else { -%>
-\clearpage
-\listoffigures
-
-\listoftables
-
-\chapter*{Definitionsverzeichnis}
-\addcontentsline{toc}{chapter}{Definitionsverzeichnis}
-\listtheorems{definition}
-<% } -%>
 
 %\IfDefined{printindex}{\printindex}
 %\IfDefined{printnomenclature}{\printnomenclature}
