--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -583,12 +583,12 @@ The following is typeset for both ustutt and scientific-thesis.
 %\listofalgorithms %Ist nur für Algorithmen, die mittels \begin{algorithm} umschlossen werden, nötig
 
 <% if (documentclass == 'ustutt') { -%>
-%\chapter*{Definitionsverzeichnis}
-%\addcontentsline{toc}{chapter}{Definitionsverzeichnis}
-%\listtheorems{definition}
+\chapter*{List of Definitions}
+\addcontentsline{toc}{chapter}{List of Definitions}
+\listtheorems{definition}
 
 <% } -%>
-% Abbreviations
+% Abbreviations / Acronyms
 \printglossaries
 % \printnoidxglossaries
 % \printunsrtglossaries cannot be used, because then no indexing happens; source: https://tex.stackexchange.com/a/287128/9075
@@ -1123,27 +1123,6 @@ All links were last followed on October 5, 2020.
 %%% ===============================================================================
 <% break; case "ustutt": case "scientific-thesis": -%>
 %%% ===============================================================================
-
-<% if (documentclass == "scientific-thesis") { -%>
-%\clearpage
-%\listoffigures
-
-%\listoftables
-
-%\chapter*{Definitionsverzeichnis}
-%\addcontentsline{toc}{chapter}{Definitionsverzeichnis}
-%\listtheorems{definition}
-
-<% } else { -%>
-\clearpage
-\listoffigures
-
-\listoftables
-
-\chapter*{List of Definitions}
-\addcontentsline{toc}{chapter}{List of Definitions}
-\listtheorems{definition}
-<% } -%>
 
 %\IfDefined{printindex}{\printindex}
 %\IfDefined{printnomenclature}{\printnomenclature}
