Refine acronyms comment

--- a/generators/app/templates/acronyms.preamble.en.tex
+++ b/generators/app/templates/acronyms.preamble.en.tex
@@ -8,7 +8,7 @@
 % Hint by https://tex.stackexchange.com/a/463188/9075
 % \usepackage{glossary-longextra}
 
-% Following is required if the abbreviation list should be sorted automatically (\printglossary)
+% Following is required if the abbreviation list should be sorted automatically (\printglossary / \printglossaries)
 % Not required, if we printed the entries in-order (using \printunsrtglossaries)
 \makeglossaries
 
