WIP heading for acronym glossaires

--- a/generators/app/templates/acronyms.preamble.en.tex
+++ b/generators/app/templates/acronyms.preamble.en.tex
@@ -10,6 +10,7 @@
 
 % Following is required if the abbreviation list should be sorted automatically (\printglossary / \printglossaries)
 % Not required, if we printed the entries in-order (using \printunsrtglossaries)
+% Required to have the German chapter name % Source: https://tex.stackexchange.com/a/426392/9075
 \makeglossaries
 
 \input{acronyms}
