--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -273,7 +273,7 @@
 \setlength{\oddsidemargin}{-24pt}
 <% } -%>
 
-<% if (feature.acronyms) { -%><%- include('acronyms.preamble.en.tex', this); %>
+<% if (feature.acronyms) { -%><%- include('acronyms.preamble.de.tex', this); %>
 <% } -%>
 \usepackage{xspace}
 
