Use "abbreviations" and not "acronyms" as name

--- a/generators/app/templates/abbreviations.example.de.tex
+++ b/generators/app/templates/abbreviations.example.de.tex
@@ -7,7 +7,7 @@ Mit \verb+\glspl{...}+ wird die Pluralform verwendet.
 Möchte man, dass bei der ersten Verwendung direkt die Kurzform erscheint, so kann man mit \verb+\glsunset{...}+ eine Abkürzung als bereits verwendet markieren.
 Das Gegenteil erreicht man mit \verb+\glsreset{...}+.
 
-Definiert werden Abkürzungen in der Datei \textit{acronyms.tex} mithilfe von \verb+\newacronym{...}{...}{...}+.
+Definiert werden Abkürzungen in der Datei \textit{abbreviationstex} mithilfe von \verb+\newacronym{...}{...}{...}+.
 
 Mehr Infos unter: \url{https://ctan.org/pkg/bib2gls}.
 
