--- a/generators/app/templates/abbreviations.example.en.tex
+++ b/generators/app/templates/abbreviations.example.en.tex
@@ -22,3 +22,5 @@ The German-speaking local \TeX\ user group is \gls{dante}.
 A \gls{gp} is a medical doctor.
 I went to my surgery to see the \gls{gp}.
 <%- eexample %>
+
+\todo{Include difference between acronym and abbreviation - \url{https://tex.stackexchange.com/a/154566/9075}}
