--- a/generators/app/templates/abbreviations.preamble.de.tex
+++ b/generators/app/templates/abbreviations.preamble.de.tex
@@ -1,4 +1,4 @@
 \addto\captionsngerman{%
 \renewcommand*{\glossaryname}{Bedeutung}%
 }
-<%- include('acronyms.preamble.en.tex', this); %>
+<%- include('abbreviations.preamble.en.tex', this); %>
