--- a/generators/app/templates/abbreviations.preamble.en.tex
+++ b/generators/app/templates/abbreviations.preamble.en.tex
@@ -1,4 +1,5 @@
 \usepackage[
+  translate=babel,
   abbreviations,         % create "abbreviations" glossary
   nomain,                % don't create "main" glossary
   stylemods=longbooktabs % do the adjustments for the longbooktabs styles
