--- a/generators/app/templates/todos.example.en.tex
+++ b/generators/app/templates/todos.example.en.tex
@@ -10,11 +10,13 @@ Bei \verb1\textmarker1 wird nur die Textfarbe geändert, da dies auch bei einige
 \textcomment{Markierter Text.}{Kommentar dazu.}
 <%- eexample %>
 
+<% if (isThesis) { -%>
 <%- bexample %>
 \hl{In Gelb hervorgehoben.}
 Provided indirectly by pdfcomment.sty (soulpos).
 <%- eexample %>
 
+<% } -%>
 <%- bexample %>
 \modified{Manuelle Markierung für Text, der seit der letzten Version geändert wurde.}
 <%- eexample %>
