--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -12,9 +12,9 @@
 % !TeX spellcheck = de-DE
 % LTeX: language=de-DE
 % !TeX encoding = utf8
-% !TeX program = <%= latexcompiler %>
+% !TeX program = <%= reallatexcompiler %>
 <% if (requiresShellEscape) { -%>
-% !TeX TXS-program:compile = txs:///<%= latexcompiler %>/[--shell-escape]
+% !TeX TXS-program:compile = txs:///<%= reallatexcompiler %>/[--shell-escape]
 <% } -%>
 % !BIB program = <%= bibtextool %>
 % -*- coding:utf-8 mod:LaTeX -*-
