Add comment to alternative package

--- a/generators/app/templates/font.preamble.en.tex
+++ b/generators/app/templates/font.preamble.en.tex
@@ -199,6 +199,7 @@ In addition, we make the code appear more nice -%>
 
 \usepackage{setspace}
 \setstretch{1.2}
+% Alternative package: https://ctan.org/pkg/leading
 
 % Zusatzliche Symbole (Text Companion font extension)
 \usepackage{textcomp}
