--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -45,7 +45,7 @@
 <% break; case "acmart": -%>
 
 % Alternative to balance is the pbalance package (see https://ctan.org/pkg/pbalance), which sometimes works better
-\documentclass[<%= acmformat %>,<% if (acmreview) { %>review,<% } %><%= papersize %>paper,balance]{acmart}
+\documentclass[<%= acmformat %>,<% if (acmreview) { %>review,<% } %>balance]{acmart}
 <% break; case "ieee": -%>
 
 % DO NOT DOWNLOAD IEEEtran.cls - Use the one of your LaTeX distribution
