Use font.preamble also for acm (and fix spacing)

--- a/generators/app/templates/font.preamble.en.tex
+++ b/generators/app/templates/font.preamble.en.tex
@@ -44,10 +44,10 @@ lualatex
 -%>
 \usepackage[no-math]{fontspec}
 \usepackage{unicode-math}
-
 <% switch (font) { case "arial": -%>
 <%# Arial and LuaLaTeX -%>
 <%# -%>
+
 \setmainfont[Ligatures=TeX]{Arial}
 \setsansfont[Ligatures=TeX]{Arial}
 % Use Inconsolata font (https://ctan.org/pkg/inconsolata)
@@ -59,6 +59,7 @@ lualatex
 <% break; case "times": -%>
 <%# Times New Roman and LuaLaTeX -%>
 <%# -%>
+
 % See https://tug.org/FontCatalogue/texgyretermes/ for more information
 \setmainfont{texgyretermes}[
   Extension = .otf,
@@ -101,6 +102,8 @@ lualatex
 \makeatother
 <% break; case "scientific-thesis": -%>
 % TODO
+<% break; case "acmart": -%>
+<%# no special configuration required -%>
 <% break; default: -%>
 <%# Default LaTeX Font and LuaLaTeX -%>
 <% if (texlive >= 2021) { -%>
@@ -147,7 +150,6 @@ pdflatex
 <% switch (font) { case "arial": -%>
 <%# Arial and pdflatex -%>
 <%# -%>
-
 % Headings are typset in Helvetica (which is similar to Arial)
 \usepackage[scaled=.95]{helvet}
 <% break; case "times": -%>
@@ -170,6 +172,8 @@ In addition, we make the code appear more nice -%>
 \usepackage[scaled=.95]{helvet}
 <% break; case "scientific-thesis": -%>
 % TODO
+<% break; case "acmart": -%>
+<%# no special configuration required -%>
 <% break; default: -%>
 % This is the modern package for "Computer Modern".
 % In case this gets activated, one has to switch from cmap package to glyphtounicode (in the case of pdflatex)
