Try to use helvet instead of Arial

--- a/generators/app/templates/font.preamble.en.tex
+++ b/generators/app/templates/font.preamble.en.tex
@@ -48,8 +48,12 @@ lualatex
 <%# Arial and LuaLaTeX -%>
 <%# -%>
 
+\ifwindows
 \setmainfont[Ligatures=TeX]{Arial}
 \setsansfont[Ligatures=TeX]{Arial}
+\else
+\usepackage{helvet} % source: comment to https://tex.stackexchange.com/q/212357/9075
+\fi
 % Use Inconsolata font (https://ctan.org/pkg/inconsolata)
 % See https://tex.stackexchange.com/q/2241/9075 for a list of other alternative mono-spaced fonts
 % No [Ligatures=TeX], because we want " rendered as upquotes, not as typographic correct ones
