--- a/generators/app/templates/font.preamble.en.tex
+++ b/generators/app/templates/font.preamble.en.tex
@@ -1,4 +1,4 @@
-<% if (documentclass == 'ustutt') { %>
+<% if (documentclass == 'ustutt') { -%>
 %% Clashes with mathdesign
 % \PreventPackageFromLoading{amssymb,amsfont}
 <%# inspired by https://github.com/programming-journal/programming/blob/main/programming.cls -%>
