--- a/generators/app/templates/font.preamble.en.tex
+++ b/generators/app/templates/font.preamble.en.tex
@@ -96,8 +96,13 @@ lualatex
 <% break; case "ustutt": -%>
 <%# see also https://github.com/programming-journal/programming/blob/main/programming.cls -%>
 \makeatletter
+\ifwindows
 \setmainfont{XCharter}
 \setsansfont[Ligatures=TeX]{Arial}
+\else
+\usepackage{helvet} % source: comment to https://tex.stackexchange.com/q/212357/9075
+\setmainfont{XCharter}
+\fi
 % Use Inconsolata font (https://ctan.org/pkg/inconsolata)
 % See https://tex.stackexchange.com/q/2241/9075 for a list of other alternative mono-spaced fonts
 % No [Ligatures=TeX], because we want " rendered as upquotes, not as typographic correct ones
